--- a/index.html
+++ b/index.html
@@ -1,178 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Faculty Self-Evaluation Form</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <title>THE INSTITUTE OF CHARTERED ACCOUNTANTS OF INDIA</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-    .form-page { display: none; transition: all 0.3s ease; }
-    .active-page { display: block; }
-    .card { background: #fff; border-radius: 0.75rem; box-shadow: 0 4px 12px rgba(0,0,0,0.05); padding: 2rem; margin-bottom: 2rem; }
-    .btn-primary { background-color: #2563eb; color: #fff; padding: 0.6rem 1.5rem; border-radius: 0.5rem; font-weight: 600; transition: all 0.2s; }
-    .btn-primary:hover { background-color: #1e40af; }
-    .btn-secondary { background-color: #6b7280; color: #fff; padding: 0.6rem 1.5rem; border-radius: 0.5rem; font-weight: 600; }
-    .btn-secondary:hover { background-color: #4b5563; }
-  </style>
 </head>
-<body class="bg-gray-100">
+<body>
+<div class="container">
+<h2>THE INSTITUTE OF CHARTERED ACCOUNTANTS OF INDIA</h2>
+<h3 style="text-align:center;">Faculty Self-Evaluation Form – Chartered Accountancy Educators</h3>
 
-  <div class="max-w-3xl mx-auto mt-8">
-    <h1 class="text-2xl font-bold text-center text-blue-700 mb-2">
-      THE INSTITUTE OF CHARTERED ACCOUNTANTS OF INDIA
-    </h1>
-    <h2 class="text-lg font-semibold text-center text-gray-700 mb-6">
-      Faculty Self-Evaluation Form – Chartered Accountancy Educators
-    </h2>
+<!-- Page 1 -->
+<div class="form-page active-page" id="page1">
+  <h3>Basic Information</h3>
+  <label>Faculty Name:</label>
+  <input type="text" id="facultyName" required>
+  <label>Mobile Number:</label>
+  <input type="text" id="mobileNumber" required>
+  <label>Email ID:</label>
+  <input type="email" id="emailId" required>
+  <label>Batch ID:</label>
+  <input type="text" id="batchId" required>
+  <label>Select Region:</label>
+  <select id="regionSelect" onchange="updateBranches()" required>
+    <option value="">-- Select Region --</option>
+    <option value="CIRC">CIRC</option>
+    <option value="WIRC">WIRC</option>
+    <option value="SIRC">SIRC</option>
+    <option value="EIRC">EIRC</option>
+    <option value="NIRC">NIRC</option>
+    <option value="FIRC">FIRC</option>
+  </select>
+  <label>Select Branch:</label>
+  <select id="branchSelect" required><option value="">-- Select Branch --</option></select>
+  <h3>Student Data</h3>
+  <button onclick="downloadTemplate()">📥 Download Excel Template</button>
+  <label>Upload Student Data File:</label>
+  <input type="file" id="excelFile" accept=".xlsx, .xls" onchange="handleFileUpload(event)">
+  <button onclick="nextPage()">➡ Next</button>
+</div>
 
-    <!-- Page 0: Upload Excel -->
-    <div id="page0" class="form-page active-page card">
-      <label class="block mb-2 font-medium">📥 Download Template</label>
-      <button class="btn-primary mb-4" onclick="downloadTemplate()">Download Excel Template</button>
+<!-- Page 2 -->
+<div class="form-page" id="page2">
+  <h3>Session Feedback</h3>
+  <label for="daySelect">Select Day:</label>
+  <select id="daySelect">
+    <option value="">-- Select Day --</option>
+    <option value="Day 1">Day 1</option>
+    <option value="Day 2">Day 2</option>
+    <option value="Day 3">Day 3</option>
+    <option value="Day 4">Day 4</option>
+    <option value="Day 5">Day 5</option>
+  </select>
+  <label>Student Unique Key (SRN):</label>
+  <select id="uniqueKeySelect"><option value="">-- Select SRN --</option></select>
+  <button onclick="prevPage()">⬅ Back</button>
+  <button onclick="goToQuestions()">➡ Next</button>
+</div>
 
-      <label class="block mb-2 font-medium">📤 Upload Student Excel</label>
-      <input type="file" id="excelFile" accept=".xlsx" onchange="uploadExcel(event)" class="mb-4">
-
-      <label class="block mb-2 font-medium">Select SRN *</label>
-      <select id="srnDropdown" class="w-full border p-2 rounded"></select>
-
-      <div class="text-right mt-6">
-        <button class="btn-primary" onclick="startFeedback()">Start →</button>
-      </div>
-    </div>
-
-    <!-- Page 1: Basic Info -->
-    <div id="page1" class="form-page card">
-      <h3 class="text-xl font-semibold text-blue-600 mb-4">Basic Information</h3>
-      <label>Name *</label>
-      <input type="text" id="name" class="border p-2 rounded w-full mb-3">
-
-      <label>Subject(s) Taught *</label>
-      <input type="text" id="subject" class="border p-2 rounded w-full mb-3">
-
-      <label>Institution/Academy *</label>
-      <input type="text" id="institution" class="border p-2 rounded w-full mb-3">
-
-      <label>Period of Evaluation *</label>
-      <input type="text" id="period" class="border p-2 rounded w-full mb-3">
-
-      <div class="text-right">
-        <button class="btn-primary" onclick="showPage(2)">Next →</button>
-      </div>
-    </div>
-
-    <!-- Page 2: Teaching Effectiveness -->
-    <div id="page2" class="form-page card">
-      <h3 class="text-xl font-semibold text-blue-600 mb-4">Teaching Effectiveness</h3>
-      <div id="questionsContainer"></div>
-      <div class="text-right">
-        <button class="btn-secondary" onclick="showPage(1)">← Back</button>
-        <button class="btn-primary" onclick="showPage(3)">Next →</button>
-      </div>
-    </div>
-
-    <!-- Page 3: Student Impact -->
-    <div id="page3" class="form-page card">
-      <h3 class="text-xl font-semibold text-blue-600 mb-4">Student Impact</h3>
-      <label>Approx. number of students taught</label>
-      <input type="text" class="border p-2 rounded w-full mb-3">
-
-      <label>Number of students who passed/qualified</label>
-      <input type="text" class="border p-2 rounded w-full mb-3">
-
-      <label>Notable student success stories</label>
-      <textarea rows="3" class="border p-2 rounded w-full mb-3"></textarea>
-
-      <div class="text-right">
-        <button class="btn-secondary" onclick="showPage(2)">← Back</button>
-        <button class="btn-primary" onclick="showPage(4)">Next →</button>
-      </div>
-    </div>
-
-    <!-- ... Pages 4,5,6 (Professional Development, Contribution, Reflection, Additional Comments) ... -->
-    <!-- For brevity, same pattern as above -->
-
-    <!-- Page 8: Thank You -->
-    <div id="page8" class="form-page card">
-      <h3 class="text-xl font-semibold text-green-600 text-center">🎉 Thank you for your valuable feedback!</h3>
-    </div>
+<!-- Page 3 -->
+<div class="form-page" id="page3">
+  <h2>Self-Evaluation Questions</h2>
+  
+  <!-- Section A -->
+  <h3>Section A: Teaching Effectiveness</h3>
+  <div id="questionsContainer"></div>
+  <div id="resultBox">
+    <p>Weightage Score: <span id="finalScore">0</span></p>
+    <p>Grade: <span id="finalGrade">-</span></p>
   </div>
 
-<script>
-let students = [];
-let currentSRN = null;
+  <!-- Section B -->
+  <h3>Section B: Student Impact</h3>
+  <label>How many students actively participated in class?</label>
+  <input type="number" id="studentsActive">
+  <label>Number of students who approached you outside class for guidance?</label>
+  <input type="number" id="studentsGuidance">
 
-// Download Excel template
-function downloadTemplate() {
-  const ws_data = [["S.No","SRN","Name"],["1","SRN001","John Doe"]];
-  const ws = XLSX.utils.aoa_to_sheet(ws_data);
-  const wb = XLSX.utils.book_new();
-  XLSX.utils.book_append_sheet(wb, ws, "Template");
-  XLSX.writeFile(wb, "StudentTemplate.xlsx");
+  <!-- Section C -->
+  <h3>Section C: Professional Development</h3>
+  <label>Workshops/seminars/webinars attended this year:</label>
+  <textarea id="workshops"></textarea>
+  <label>Certifications or courses completed:</label>
+  <textarea id="certifications"></textarea>
+
+  <!-- Section D -->
+  <h3>Section D: Contribution to the Profession</h3>
+  <label>Have you contributed to ICAI curriculum/research/publications?</label>
+  <textarea id="contribution"></textarea>
+  <label>Other academic/professional contributions:</label>
+  <textarea id="otherContribution"></textarea>
+
+  <!-- Section E -->
+  <h3>Section E: Personal Reflection</h3>
+  <label>What are your biggest strengths as an educator?</label>
+  <textarea id="strengths"></textarea>
+  <label>Areas where you seek improvement:</label>
+  <textarea id="improvements"></textarea>
+
+  <!-- Section F -->
+  <h3>Section F: Additional Comments</h3>
+  <label>Any other comments or suggestions:</label>
+  <textarea id="comments"></textarea>
+
+  <button onclick="prevPage()">⬅ Back</button>
+  <button onclick="SubmitFeedback()">Submit Feedback</button>
+</div>
+
+<!-- Page 4 -->
+<div class="form-page" id="page4">
+  <div class="text-center">
+    <h2>Thank You!</h2>
+    <p>Your feedback has been successfully submitted.</p>
+    <h3>✨ Daily Motivational Quote ✨</h3>
+    <p id="dailyQuote"></p>
+  </div>
+</div>
+
+<script>
+const branches = {
+  "CIRC":["Agra","Ajmer","Aligarh"],
+  "WIRC":["Ahmedabad","Mumbai"],
+  "SIRC":["Bengaluru","Hyderabad"],
+  "EIRC":["Kolkata","Bhubaneswar"],
+  "NIRC":["Delhi","Chandigarh"],
+  "FIRC":["Dubai"]
+};
+
+function updateBranches() {
+  const region = document.getElementById("regionSelect").value;
+  const branchSelect = document.getElementById("branchSelect");
+  branchSelect.innerHTML = '<option value="">-- Select Branch --</option>';
+  if(region && branches[region]){
+    branches[region].forEach(branch=>{
+      const opt=document.createElement("option"); opt.value=branch; opt.textContent=branch;
+      branchSelect.appendChild(opt);
+    });
+  }
 }
 
-// Upload Excel
-function uploadExcel(event) {
-  const file = event.target.files[0];
-  const reader = new FileReader();
-  reader.onload = (e) => {
-    const data = new Uint8Array(e.target.result);
-    const workbook = XLSX.read(data, { type: "array" });
-    const sheet = workbook.Sheets[workbook.SheetNames[0]];
-    students = XLSX.utils.sheet_to_json(sheet);
+// Section A questions
+const questions = [
+  "Subject knowledge",
+  "Session planning & structure",
+  "Communication skills",
+  "Engagement & interaction",
+  "Innovative methods",
+  "Time management",
+  "Adherence to guidelines",
+  "Response to questions",
+  "Practical examples",
+  "Professional conduct",
+  "Technology use",
+  "Discipline",
+  "Student feedback",
+  "Contribution to growth",
+  "Overall impact"
+];
 
-    let dropdown = document.getElementById("srnDropdown");
-    dropdown.innerHTML = "";
-    students.forEach(s => {
-      if(s.SRN) dropdown.innerHTML += `<option value="${s.SRN}">${s.SRN} - ${s.Name}</option>`;
-    });
+function renderQuestions(){
+  const container=document.getElementById("questionsContainer");
+  container.innerHTML="";
+  questions.forEach((q,i)=>{
+    const block=document.createElement("div");
+    block.innerHTML=`<label>${i+1}. ${q}</label>
+      <select class="ratingSelect">
+        <option value="">-- Select Rating --</option>
+        <option value="20">1 - Poor (20)</option>
+        <option value="40">2 - Below Average (40)</option>
+        <option value="60">3 - Average (60)</option>
+        <option value="80">4 - Good (80)</option>
+        <option value="100">5 - Excellent (100)</option>
+      </select>`;
+    container.appendChild(block);
+  });
+  document.querySelectorAll(".ratingSelect").forEach(sel=>sel.addEventListener("change",updateLiveScore));
+}
+document.addEventListener("DOMContentLoaded", renderQuestions);
+
+function updateLiveScore(){
+  const selects=document.querySelectorAll("#questionsContainer select");
+  let total=0,count=0;
+  selects.forEach(sel=>{if(sel.value){total+=parseInt(sel.value);count++;}});
+  const avg=count?total/count:0;
+  document.getElementById("finalScore").innerText=avg.toFixed(2);
+  let grade="-";
+  if(avg>=85) grade="A+";
+  else if(avg>=70) grade="A";
+  else if(avg>=50) grade="B+";
+  else if(avg>=30) grade="B";
+  else if(avg>0) grade="C";
+  document.getElementById("finalGrade").innerText=grade;
+}
+
+// Page Navigation
+let currentPage=1;
+function nextPage(){document.getElementById("page"+currentPage).classList.remove("active-page"); currentPage++; document.getElementById("page"+currentPage).classList.add("active-page");}
+function prevPage(){document.getElementById("page"+currentPage).classList.remove("active-page"); currentPage--; document.getElementById("page"+currentPage).classList.add("active-page");}
+
+// Template Download
+function downloadTemplate(){
+  const wb=XLSX.utils.book_new();
+  const wsData=[["S.No","SRN","Name"]];
+  const ws=XLSX.utils.aoa_to_sheet(wsData);
+  XLSX.utils.book_append_sheet(wb,ws,"Template");
+  XLSX.writeFile(wb,"Student_Template.xlsx");
+}
+
+// File Upload
+let srnList=[];
+function handleFileUpload(event){
+  const file=event.target.files[0];
+  const reader=new FileReader();
+  reader.onload=function(e){
+    const data=new Uint8Array(e.target.result);
+    const workbook=XLSX.read(data,{type:"array"});
+    const sheetName=workbook.SheetNames[0];
+    const sheet=workbook.Sheets[sheetName];
+    const jsonData=XLSX.utils.sheet_to_json(sheet,{header:1});
+    srnList=[];
+    for(let i=1;i<jsonData.length;i++){if(jsonData[i][1]) srnList.push(jsonData[i][1]);}
+    loadSRNDropdown();
+    alert("✅ Student SRNs loaded successfully!");
   };
   reader.readAsArrayBuffer(file);
 }
 
-function startFeedback() {
-  const dropdown = document.getElementById("srnDropdown");
-  if(!dropdown.value){ alert("⚠ Please select an SRN"); return; }
-  currentSRN = dropdown.value;
-  loadQuestions();
-  showPage(1);
-}
-
-function loadQuestions() {
-  const qList = [
-    "Subject knowledge and updates",
-    "Clarity in explanation",
-    "Use of examples & case studies",
-    "Engagement with students",
-    "Responsiveness to queries",
-    "Integration of values & ethics",
-    "Use of technology/tools"
-  ];
-  let container = document.getElementById("questionsContainer");
-  container.innerHTML = "";
-  qList.forEach((q,i)=>{
-    container.innerHTML += `
-      <label>${q}</label>
-      <select class="border p-2 rounded w-full mb-3">
-        <option value="">--Select--</option>
-        <option value="1">1. Poor</option>
-        <option value="2">2. Below Average</option>
-        <option value="3">3. Average</option>
-        <option value="4">4. Good</option>
-        <option value="5">5. Excellent</option>
-      </select>
-      <textarea placeholder="Optional comments..." class="border p-2 rounded w-full mb-3"></textarea>
-    `;
+function loadSRNDropdown(){
+  const dropdown=document.getElementById("uniqueKeySelect");
+  dropdown.innerHTML='<option value="">-- Select SRN --</option>';
+  srnList.forEach(srn=>{
+    const opt=document.createElement("option"); opt.value=srn; opt.textContent=srn;
+    dropdown.appendChild(opt);
   });
 }
 
-function showPage(n) {
-  document.querySelectorAll(".form-page").forEach(p => p.classList.remove("active-page"));
-  document.getElementById("page"+n).classList.add("active-page");
+function goToQuestions(){
+  const daySelect=document.getElementById("daySelect");
+  const srnSelect=document.getElementById("uniqueKeySelect");
+  if(!daySelect.value){ alert("⚠️ Please select a day."); return; }
+  if(!srnSelect.value){ alert("⚠️ Please select a student (SRN)."); return; }
+  document.querySelectorAll(".form-page").forEach(p=>p.classList.remove("active-page"));
+  currentPage=3;
+  document.getElementById("page3").classList.add("active-page");
+}
+
+function SubmitFeedback(){
+  alert("✅ Feedback submitted successfully!");
+  document.querySelectorAll(".form-page").forEach(p=>p.classList.remove("active-page"));
+  document.getElementById("page4").classList.add("active-page");
+  document.getElementById("dailyQuote").innerText="Keep pushing forward, every effort counts!";
 }
 </script>
+</div>
 </body>
 </html>
