--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
   <meta charset="UTF-8">
   <title>THE INSTITUTE OF CHARTERED ACCOUNTANTS OF INDIA</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Poppins', sans-serif; background: linear-gradient(135deg, #0077b6, #00b4d8); margin:0; padding:0; display:flex; justify-content:center; align-items:flex-start; min-height:100vh; }
+    .container { background:#fff; margin-top:40px; padding:30px; border-radius:15px; width:500px; box-shadow:0 6px 20px rgba(0,0,0,0.15); animation:fadeIn 0.5s ease-in-out; }
+    h2 { text-align:center; color:#023e8a; margin-bottom:20px; font-weight:600; }
+    h3 { color:#0077b6; margin-bottom:15px; }
+    label { font-weight:500; display:block; margin:8px 0 5px; color:#333; }
+    input, select { width:100%; padding:10px; border:1px solid #ccc; border-radius:10px; outline:none; font-size:14px; margin-bottom:15px; transition: all 0.3s; }
+    input:focus, select:focus { border-color:#00b4d8; box-shadow:0 0 6px rgba(0,180,216,0.5); }
+    .btn { display:inline-block; background:#0077b6; color:#fff; border:none; border-radius:10px; padding:10px 18px; font-size:14px; font-weight:500; cursor:pointer; margin:5px 5px 0 0; transition:all 0.3s; }
+    .btn:hover { background:#023e8a; transform:scale(1.05); }
+    .form-page { display:none; }
+    .active-page { display:block; }
+    .quote-box { background:#f1faff; padding:20px; border-left:5px solid #00b4d8; margin-top:20px; border-radius:10px; font-style:italic; color:#333; }
+    .thankyou { text-align:center; color:#023e8a; font-size:18px; font-weight:600; margin-top:10px; }
+    @keyframes fadeIn { from { opacity:0; transform:translateY(20px); } to { opacity:1; transform:translateY(0); } }
+  </style>
 </head>
-<body>
-<div class="container">
-<h2>THE INSTITUTE OF CHARTERED ACCOUNTANTS OF INDIA</h2>
-<h3 style="text-align:center;">Faculty Self-Evaluation Form – Chartered Accountancy Educators</h3>
 
 <!-- ================= PAGE 1 ================= -->
 <div class="form-page active-page" id="page1">
@@ -270,3 +283,4 @@ function restartForm(){
 </div>
 </body>
 </html>
+
